# voice-agent-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: byo_llm.py  call.py  decision_tree.py  gateway_agent.py  ivr.py  llm_gateway.py  managed.py  mounted.py  proxy_existing_agent.py  rag.py  streaming.py  support_agent.py  support_assistant.py
src/assembly_agent/: __init__.py  agent.py  cli.py  context.py  endpoints.py  events.py  gateway.py  phones.py  registry.py  reply.py  runtime.py  server.py  signals.py  tools.py  tunnel.py
tests/: conftest.py  test_gateway.py  test_history.py  test_phones.py  test_region.py  test_registry.py  test_server.py  test_tools.py
