[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assembly-agent-sdk"
version = "0.1.0"
description = "Write the logic side of an AssemblyAI voice agent in code; serve it as an OpenAI-compatible chat-completions endpoint."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AssemblyAI" }]
dependencies = [
    "starlette>=0.27",
    "uvicorn>=0.23",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.24"]

[project.scripts]
assembly-agent = "assembly_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["assembly_agent*"]

[tool.setuptools.package-data]
"assembly_agent" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
